Adjust css margin

--- a/templates/admin-manageUser.html
+++ b/templates/admin-manageUser.html
@@ -35,20 +35,20 @@
     <div class="collapse navbar-collapse " id="navbarSupportedContent">
       <div class="header-content">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link " href="/index">
+          <li class="nav-item">
+            <a class="nav-link " href="#">
               <i class="fas fa-mobile"></i>
               All phones
             </a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="/cart">
+            <a class="nav-link" href="#">
               <i class="fas fa-user"></i>
               View Users
             </a>
           </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="/add-product">
+          <li class="nav-item">
+            <a class="nav-link" href="./admin-addProduct.html">
               <i class="fas fa-plus-circle"></i>
               Add Product
             </a>
