--- a/templates/admin-addProduct.html
+++ b/templates/admin-addProduct.html
@@ -35,13 +35,13 @@
       <div class="header-content">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link " href="/index">
+            <a class="nav-link " href="#">
               <i class="fas fa-mobile"></i>
               All phones
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/cart">
+            <a class="nav-link" href="./admin-manageUser.html">
               <i class="fas fa-user"></i>
               View Users
             </a>
@@ -120,7 +120,7 @@
 
                   </div>
                   <div class="d-flex justify-content-end">
-                    <button type="button" class="btn btn-outline-dark btn-lg me-2">Cancel</button>
+                    <input type="reset" class="btn btn-outline-dark btn-lg me-2" />
                     <button type="button" class="btn btn-primary btn-lg">Create</button>
                   </div>
                 </form>
