--- a/templates/admin-productDetail.html
+++ b/templates/admin-productDetail.html
@@ -35,20 +35,20 @@
     <div class="collapse navbar-collapse " id="navbarSupportedContent">
       <div class="header-content">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link " href="/index">
+          <li class="nav-item">
+            <a class="nav-link " href="#">
               <i class="fas fa-mobile"></i>
               All phones
             </a>
           </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="/cart">
+          <li class="nav-item">
+            <a class="nav-link" href="./admin-manageUser.html">
 
               <i class="fas fa-user"></i>
               View Users
             </a>
-          <li class="nav-item active">
-            <a class="nav-link" href="/add-product">
+          <li class="nav-item">
+            <a class="nav-link" href="./admin-addProduct.html">
               <i class="fas fa-plus-circle"></i>
 
               Add Product
@@ -81,7 +81,7 @@
 
   <div class="container">
     <button class="back">
-      <a href="/phones" style="color: black;">
+      <a href="#" style="color: black;">
         <i class="fas fa-chevron-left"></i>
         Back to products
       </a>
@@ -102,7 +102,10 @@
           </ul>
         </div>
         <div class="details col-md-6">
-          <h3 class="product-title">Product name</h3>
+          <h3 class="product-title">
+            Product name
+            <button class="btn" style="float: right; color: #0069d9;"><i class="fas fa-trash-alt"></i></button>
+          </h3>
           <div class="rating">
             <div class="row">
               <b class="col-1">4.5</b>
