--- a/templates/admin-purchaseDetail.html
+++ b/templates/admin-purchaseDetail.html
@@ -15,6 +15,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script><!-- for list of collapse group -->
+  <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 
 
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
@@ -42,18 +43,18 @@
       <div class="header-content">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item ">
-            <a class="nav-link " href="/index">
+            <a class="nav-link " href="#">
               <i class="fas fa-mobile"></i>
               All phones
             </a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="/cart">
+            <a class="nav-link" href="./admin-manageUser.html">
               <i class="fas fa-user"></i>
               View Users
             </a>
           <li class="nav-item ">
-            <a class="nav-link" href="/add-product">
+            <a class="nav-link" href="./admin-addProduct.html">
               <i class="fas fa-plus-circle"></i>
               Add Product
             </a>
@@ -97,7 +98,6 @@
             <h6>Username: johndoe</h6>
             <div class="user-orders">
               <div class="order-items">
-
                 <div id="accordion">
                   <div class="card">
                     <div class="card-header" id="headingOne">
@@ -240,10 +240,8 @@
                                 <h6 style="text-align: right;">20.000.000 VND</h6>
                               </div>
                             </div>
-
                           </div>
                         </div>
-
                       </div>
                     </div>
                   </div>
@@ -252,9 +250,6 @@
             </div>
           </div>
         </div>
-      </div>
-      <div>
-
       </div>
   </div>
 
