--- a/templates/cart.html
+++ b/templates/cart.html
@@ -33,13 +33,13 @@
       <div class="header-content">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link " href="/index">
+            <a class="nav-link " href="#">
               <i class="fas fa-mobile"></i>
               All phones
             </a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="/cart">
+            <a class="nav-link" href="#">
               <!-- <i class="fas fa-shopping-cart"> -->
               <i class="fas fa-shopping-cart"></i>
               View cart
