--- a/templates/payment.html
+++ b/templates/payment.html
@@ -37,14 +37,14 @@
     <div class="collapse navbar-collapse " id="navbarSupportedContent">
       <div class="header-content">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link " href="/index">
+          <li class="nav-item">
+            <a class="nav-link " href="#">
               <i class="fas fa-mobile"></i>
               All phones
             </a>
           </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="/cart">
+          <li class="nav-item">
+            <a class="nav-link" href="./cart.html">
               <!-- <i class="fas fa-shopping-cart"> -->
               <i class="fas fa-shopping-cart"></i>
               View cart
