--- a/templates/productDetail.html
+++ b/templates/productDetail.html
@@ -35,25 +35,18 @@
     <div class="collapse navbar-collapse " id="navbarSupportedContent">
       <div class="header-content">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link " href="/index">
+          <li class="nav-item">
+            <a class="nav-link " href="#">
               <i class="fas fa-mobile"></i>
               All phones
             </a>
           </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="/cart">
+          <li class="nav-item">
+            <a class="nav-link" href="./cart.html">
 
               <i class="fas fa-user"></i>
-              View Users
+              View cart
             </a>
-          <li class="nav-item active">
-            <a class="nav-link" href="/add-product">
-              <i class="fas fa-plus-circle"></i>
-
-              Add Product
-            </a>
-          </li>
           </li>
         </ul>
       </div>
