--- a/templates/admin-productDetail.html
+++ b/templates/admin-productDetail.html
@@ -32,28 +32,30 @@
       aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse " id="navbarSupportedContent">
+    <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
       <div class="header-content">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link " href="#">
-              <i class="fas fa-mobile"></i>
-              All phones
+            <a class="nav-link" href="#">
+              <center><i class="fas fa-mobile"></i>
+                All phones</center>
             </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./admin-manageUser.html">
-
-              <i class="fas fa-user"></i>
-              View Users
-            </a>
-          <li class="nav-item">
-            <a class="nav-link" href="./admin-addProduct.html">
-              <i class="fas fa-plus-circle"></i>
-
-              Add Product
+              <center>
+                <i class="fas fa-user"></i>
+                View Users
+              </center>
             </a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./admin-addProduct.html">
+              <center>
+                <i class="fas fa-plus-circle"></i>
+                Add Product
+              </center>
+            </a>
           </li>
         </ul>
       </div>
@@ -64,7 +66,7 @@
         <li class="nav-item dropdown">
           <a class="nav-link " href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">
-            <i class="fas fa-user-circle fa-lg avatar"
+            <i class="fas fa-user-circle fa-lg avatar justify-content-center"
               style=" display: flex; color: #ffffff; width: 40; height: 40;"></i>
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -90,11 +92,11 @@
       <div class="wrapper row product-details">
         <div class="preview col-md-6">
           <div class="preview-pic card">
-            <center class="card-body">
-              <img src="../media/phone/ip14-do.jpg" alt="iphone">
+            <center>
+              <img src="../media/phone/samsung.jpg" alt="iphone">
             </center>
           </div>
-          <ul class="preview-thumbnail nav">
+          <ul class="preview-thumbnail nav justify-content-center">
             <li class="preview-1"><img class="preview-tab" src="../media/phone/ip14-xanh1.jpg"></img></li>
             <li class="preview-2"><img class="preview-tab" src="../media/phone/ip14-xanh2.jpg"></img></li>
             <li class="preview-3"><img class="preview-tab" src="../media/phone/ip14-xanh3.jpg"></img></li>
@@ -161,7 +163,7 @@
               <div class="progress-stat-bar row">
                 5
                 <i class="fa fa-star col-md-1" style="padding: 0px; margin-top: 4px;"></i>
-                <div class="progress col-9" style=" padding: 0px">
+                <div class="progress col-8" style=" padding: 0px">
                   <div class="progress-bar " role="progressbar" style="width: 50%; background:#f3c63f;"
                     aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
@@ -171,7 +173,7 @@
               <div class="progress-stat-bar row">
                 4
                 <i class="fa fa-star col-md-1" style="padding: 0px; margin-top: 4px;"></i>
-                <div class="progress col-9" style=" padding: 0px">
+                <div class="progress col-8" style=" padding: 0px">
                   <div class="progress-bar " role="progressbar" style="width: 50%; background:#f3c63f"
                     aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
@@ -180,7 +182,7 @@
               <div class="progress-stat-bar row">
                 3
                 <i class="fa fa-star col-md-1" style="padding: 0px; margin-top: 4px;"></i>
-                <div class="progress col-9" style=" padding: 0px">
+                <div class="progress col-8" style=" padding: 0px">
                   <div class="progress-bar " role="progressbar" style="width: 20%; background:#f3c63f"
                     aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
@@ -189,7 +191,7 @@
               <div class="progress-stat-bar row">
                 2
                 <i class="fa fa-star col-md-1" style="padding: 0px; margin-top: 4px;"></i>
-                <div class="progress col-9" style=" padding: 0px">
+                <div class="progress col-8" style=" padding: 0px">
                   <div class="progress-bar " role="progressbar" style="width: 50%; background:#f3c63f"
                     aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
@@ -198,7 +200,7 @@
               <div class="progress-stat-bar row">
                 1
                 <i class="fa fa-star col-md-1" style="padding: 0px; margin-top: 4px;"></i>
-                <div class="progress col-9" style=" padding: 0px">
+                <div class="progress col-8" style=" padding: 0px">
                   <div class="progress-bar " role="progressbar" style="width: 50%; background:#f3c63f"
                     aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
@@ -252,19 +254,17 @@
             <span id="dots"></span>
             <!-- View more -->
             <span id="more" style="display: none;">
-              <div class="card">
-                <div class="card-body">
-                  <b>Annie Haley</b>
-                  <div class="stars">
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star-half checked"></span>
-                  </div>
-                  <p class="comment">Commodo consequat quis nisi dolor laboris in aute occaecat quis consequat culpa
-                    consectetur aliqua. Laborum cupidatat id reprehenderit non cillum irure sunt commodo.</p>
+              <div class="card-body">
+                <b>Annie Haley</b>
+                <div class="stars">
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star-half checked"></span>
                 </div>
+                <p class="comment">Commodo consequat quis nisi dolor laboris in aute occaecat quis consequat culpa
+                  consectetur aliqua. Laborum cupidatat id reprehenderit non cillum irure sunt commodo.</p>
               </div>
             </span>
             <button class="btn " onclick="myFunction()" id="myBtn" style="float: right; ">View all <i
