--- a/templates/cart.html
+++ b/templates/cart.html
@@ -29,20 +29,24 @@
       aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse " id="navbarSupportedContent">
+    <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
       <div class="header-content">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
             <a class="nav-link " href="#">
-              <i class="fas fa-mobile"></i>
-              All phones
+              <center>
+                <i class="fas fa-mobile"></i>
+                All phones
+              </center>
             </a>
           </li>
           <li class="nav-item active">
             <a class="nav-link" href="#">
               <!-- <i class="fas fa-shopping-cart"> -->
-              <i class="fas fa-shopping-cart"></i>
-              View cart
+              <center>
+                <i class="fas fa-shopping-cart"></i>
+                View cart
+              </center>
             </a>
           </li>
         </ul>
@@ -54,7 +58,7 @@
         <li class="nav-item dropdown">
           <a class="nav-link " href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">
-            <i class="fas fa-user-circle fa-lg avatar"
+            <i class="fas fa-user-circle fa-lg avatar justify-content-center"
               style=" display: flex; color: #ffffff; width: 40; height: 40;"></i>
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -71,10 +75,10 @@
   <div class="container">
     <!-- order summary -->
     <div class="cart-container">
-      <h3 class="cart-title"><b>Order summary</b></h3>
       <div class="cart-items card">
+        <h3 class="cart-title"><b>Order summary</b></h3>
         <div class="cart-item wrapper row">
-          <img class="cart-item-img col-md-3" src="../media/phone/ip14-den.jpg" alt="iphone">
+          <img class="cart-item-img col-md-3" src="../media/phone/samsung.jpg" alt="iphone">
           <div class="cart-item-details col-md-9">
             <div class="cart-item-desc row">
               <h6 class="col-md-6"><b>Product name</b></h6>
@@ -104,7 +108,7 @@
           </div>
         </div>
         <div class="cart-item wrapper row">
-          <img class="cart-item-img col-md-3" src="../media/phone/ip14-den.jpg" alt="iphone">
+          <img class="cart-item-img col-md-3" src="../media/phone/samsung-z.jpeg" alt="iphone">
           <div class="cart-item-details col-md-9">
             <div class="cart-item-desc row">
               <h6 class="col-md-6"><b>Product name</b></h6>
@@ -134,7 +138,7 @@
           </div>
         </div>
         <div class="cart-item wrapper row">
-          <img class="cart-item-img col-md-3" src="../media/phone/ip14-den.jpg" alt="iphone">
+          <img class="cart-item-img col-md-3" src="../media/phone/samsung2.jpg" alt="iphone">
           <div class="cart-item-details col-md-9">
             <div class="cart-item-desc row">
               <h6 class="col-md-6"><b>Product name</b></h6>
@@ -163,11 +167,7 @@
             </div>
           </div>
         </div>
-
-
-
-
-        <button class="btn btn-primary btn-order">Proceed to payment</button>
+        <button class="btn btn-primary btn-order btn-block btn-md">Proceed to payment</button>
       </div>
     </div>
 
@@ -193,7 +193,7 @@
         </div>
         <div class="col-md-3">
           <div class="suggest-card">
-            <img src="../media/phone/ip14-do.jpg" alt="Iphone" class="card-img-phone">
+            <img src="../media/phone/samsung2.jpg" alt="Iphone" class="card-img-phone">
             <div class="suggest-card-desc">
               <h6 class="suggest-card-title"><b>Product name</b></h6>
               <div class="wrapper row">
@@ -209,7 +209,7 @@
         </div>
         <div class="col-md-3">
           <div class="suggest-card">
-            <img src="../media/phone/ip14-do.jpg" alt="Iphone" class="card-img-phone">
+            <img src="../media/phone/samsung.jpg" alt="Iphone" class="card-img-phone">
             <div class="suggest-card-desc">
               <h6 class="suggest-card-title"><b>Product name</b></h6>
               <div class="wrapper row">
@@ -225,7 +225,7 @@
         </div>
         <div class="col-md-3">
           <div class="suggest-card">
-            <img src="../media/phone/ip14-xanh.jpg" alt="Iphone" class="card-img-phone">
+            <img src="../media/phone/samsung-z.jpeg" alt="Iphone" class="card-img-phone">
             <div class="suggest-card-desc">
               <h6 class="suggest-card-title"><b>Product name</b></h6>
               <div class="wrapper row">
