--- a/templates/payment.html
+++ b/templates/payment.html
@@ -34,20 +34,24 @@
       aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse " id="navbarSupportedContent">
+    <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
       <div class="header-content">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
             <a class="nav-link " href="#">
-              <i class="fas fa-mobile"></i>
-              All phones
+              <center>
+                <i class="fas fa-mobile"></i>
+                All phones
+              </center>
             </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./cart.html">
               <!-- <i class="fas fa-shopping-cart"> -->
-              <i class="fas fa-shopping-cart"></i>
-              View cart
+              <center>
+                <i class="fas fa-shopping-cart"></i>
+                View cart
+              </center>
             </a>
           </li>
         </ul>
@@ -59,7 +63,7 @@
         <li class="nav-item dropdown">
           <a class="nav-link " href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">
-            <i class="fas fa-user-circle fa-lg avatar"
+            <i class="fas fa-user-circle fa-lg avatar justify-content-center"
               style=" display: flex; color: #ffffff; width: 40; height: 40;"></i>
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
