--- a/templates/productDetail.html
+++ b/templates/productDetail.html
@@ -27,7 +27,7 @@
 <body>
   <!-- navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #1D2128FF;">
-    <a class="navbar-brand" href="#">CellP7</a>
+    <a class="navbar-brand" href="#"><img src="../media/logo-header-main.png" alt="logo"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
       aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -372,11 +372,24 @@
 
   <!-- Footer  -->
   <footer class="footer-container">
-    <p class="footer-heading">CellP7</p>
-    <p class="about-text">About Us</p>
-    <p class="address-text">Address: 268 Ly Thuong Kiet, Ward 14, District 10, HCM City <br> Tel: 0999888777</p>
-    <hr class="divider">
-    <p class="footer-copyright">© 2022 HCMUT</p>
+
+    <div class="row align-items-center py-4">
+      <div class="col-4"></div>
+      <div class="col-2">
+        <img class="footer-logo" src="../media/Logo.svg" alt="logo">
+      </div>
+      <div class="col-6">
+        <p class="about-text">About Us</p>
+        <p class="address-text">Address: 268 Ly Thuong Kiet, Ward 14, District 10, HCM City <br> Tel: 0999888777</p>
+
+      </div>
+    </div>
+    <!-- Copyright -->
+    <div class="text-center text-dark p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+      © 2022 Copyright:
+      <a class="text-dark" href="#">HCMUT</a>
+    </div>
+    <!-- Copyright -->
   </footer>
 
 
