--- a/templates/payment.html
+++ b/templates/payment.html
@@ -29,7 +29,10 @@
   <!-- </nav> -->
 
   <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #1D2128FF;">
-    <a class="navbar-brand" href="#">CellP7</a>
+    <a class="navbar-brand" href="#">
+      <img src="../media/logo-header-main.png" alt="logo">
+      <!-- <img src="../media/logo-header-main.png" alt="logo"> -->
+    </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
       aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -125,16 +128,17 @@
                     <h3>Payment method</h3>
                     <h6>Choose payment method</h6>
                     <!-- <div class="btn-group-vertical" role="group" aria-label="Basic example"> -->
-                    <button type="button" class="btn btn-outline-primary btn-block btn-md">Cash</button>
-                    <button type="button" class="btn btn-outline-primary btn-block btn-md active">Mastercard</button>
+                    <button type="button" class="btn btn-outline-primary btn-block btn-md mt-4">Cash</button>
+                    <button type="button"
+                      class="btn btn-outline-primary btn-block btn-md mt-2 active">Mastercard</button>
                     <!-- </div> -->
-                    <h5>Voucher</h5>
+                    <h5 class="mt-5">Voucher</h5>
                     <div class="form-inline">
                       <input type="text" class="form-control" placeholder="PROJECT7">
-                      <button type="button" class="btn btn-outline-primary">Apply</button>
+                      <button type="button" class="btn btn-outline-primary ml-4">Apply</button>
                     </div>
 
-                    <h5>Summary</h5>
+                    <h5 class="mt-lg-5">Summary</h5>
 
 
                     <div class="payment-calc" style="font-size: 14px;">
@@ -175,11 +179,24 @@
   </div>
   <!-- Footer  -->
   <footer class="footer-container">
-    <p class="footer-heading">CellP7</p>
-    <p class="about-text">About Us</p>
-    <p class="address-text">Address: 268 Ly Thuong Kiet, Ward 14, District 10, HCM City <br> Tel: 0999888777</p>
-    <hr class="divider">
-    <p class="footer-copyright">© 2022 HCMUT</p>
+
+    <div class="row align-items-center py-4">
+      <div class="col-4"></div>
+      <div class="col-2">
+        <img class="footer-logo" src="../media/Logo.svg" alt="logo">
+      </div>
+      <div class="col-6">
+        <p class="about-text">About Us</p>
+        <p class="address-text">Address: 268 Ly Thuong Kiet, Ward 14, District 10, HCM City <br> Tel: 0999888777</p>
+
+      </div>
+    </div>
+    <!-- Copyright -->
+    <div class="text-center text-dark p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+      © 2022 Copyright:
+      <a class="text-dark" href="#">HCMUT</a>
+    </div>
+    <!-- Copyright -->
   </footer>
 </body>
 
