Change search button to blue

--- a/templates/admin-manageUser.html
+++ b/templates/admin-manageUser.html
@@ -86,7 +86,7 @@
         <input class="form-control border-end-0 border rounded-pill" type="text" id="example-search-input"
           placeholder="search...">
         <span class="input-group-append">
-          <button class="btn btn-outline-secondary bg-white border-start-0 border rounded-pill ms-n3" type="button">
+          <button class="btn btn-primary border-start-0 border rounded-pill ms-n3" type="button">
             <i class="fa fa-search"></i>
           </button>
         </span>
