Change logo to Cell 07

--- a/templates/admin-manageUser.html
+++ b/templates/admin-manageUser.html
@@ -27,7 +27,7 @@
 
   <!-- navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #1D2128FF;">
-    <a class="navbar-brand" href="#"><img src="../media/logo-header-main.png" alt="logo"></a>
+    <a class="navbar-brand" href="#"><img src="../media/logo-header-main_07.png" alt="logo"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
       aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -185,7 +185,7 @@
     <div class="row align-items-center py-4">
       <div class="col-4"></div>
       <div class="col-2">
-        <img class="footer-logo" src="../media/Logo.svg" alt="logo">
+        <img class="footer-logo" src="../media/Logo_07.svg" alt="logo">
       </div>
       <div class="col-6">
         <p class="about-text">About Us</p>
